trying to make a website

--- a/index.html
+++ b/index.html
@@ -1,11 +1,94 @@
+<!-- index.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Car Booking Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    maxwell
+    <!-- Header Section -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <h1>Find Your Dream Car</h1>
+        <p>Search and book your favorite car today!</p>
+        <button>Search Cars</button>
+    </section>
+
+    <!-- Search Section -->
+    <section class="search">
+        <h2>Search Cars</h2>
+        <form>
+            <label for="make">Make:</label>
+            <select id="make" name="make">
+                <option value="">Select Make</option>
+                <option value="Toyota">Toyota</option>
+                <option value="Honda">Honda</option>
+                <option value="Ford">Ford</option>
+            </select>
+
+            <label for="model">Model:</label>
+            <select id="model" name="model">
+                <option value="">Select Model</option>
+                <option value="Camry">Camry</option>
+                <option value="Civic">Civic</option>
+                <option value="Mustang">Mustang</option>
+            </select>
+
+            <label for="year">Year:</label>
+            <select id="year" name="year">
+                <option value="">Select Year</option>
+                <option value="2020">2020</option>
+                <option value="2019">2019</option>
+                <option value="2018">2018</option>
+            </select>
+
+            <button type="submit">Search</button>
+        </form>
+    </section>
+
+    <!-- Car Listings Section -->
+    <section class="car-listings">
+        <h2>Car Listings</h2>
+        <ul>
+            <li>
+                <img src="car1.jpg" alt="Car 1">
+                <h3>Toyota Camry 2020</h3>
+                <p>Price: $25,000</p>
+                <button>Book Now</button>
+            </li>
+            <li>
+                <img src="car2.jpg" alt="Car 2">
+                <h3>Honda Civic 2019</h3>
+                <p>Price: $20,000</p>
+                <button>Book Now</button>
+            </li>
+            <li>
+                <img src="car3.jpg" alt="Car 3">
+                <h3>Ford Mustang 2018</h3>
+                <p>Price: $30,000</p>
+                <button>Book Now</button>
+            </li>
+        </ul>
+    </section>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2023 Car Booking Website</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
