--- a/aboutus.html
+++ b/aboutus.html
@@ -10,6 +10,7 @@
 
     <a href="aboutus.html">About Us</a>
     <a href="index.html">Home</a>
+    <a href="Contacts.html">Contact Us</a>
     <h1>CAR LOVERS</h1>
     <p>Welcome to our car booking website, where we strive to make the process of finding and booking your dream car as seamless as possible. Our website offers a wide range of cars from various makes and models, including Toyota, Honda, and Ford, among others.</p>
         <p>With our easy-to-use search functionality, you can filter cars based on make, model, and year, allowing you to find the perfect car that suits your needs and budget. Once you've found your dream car, you can book it directly from our website with just a few clicks.</p>
