--- a/aboutus.html
+++ b/aboutus.html
@@ -17,7 +17,7 @@
 
         a {
             text-decoration: none;
-            color: #333;
+            color: #fff;
             padding: 10px;
             margin-right: 10px;
             border-radius: 5px;
@@ -35,12 +35,12 @@
             text-align: center;
             padding: 20px 0;
            
-            -webkit-text-fill-color: transparent;
+           
         }
 
         p {
             font-size: 1.1em;
-            color: #333;
+            color: #fff;
             text-align: justify;
             padding: 0 20px;
             line-height: 1.6;
