--- a/Contacts.html
+++ b/Contacts.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 
-    <a href="aboutus.html">About Us</a>
     <a href="index.html">Home</a>
+    <a href="aboutus.html">About Us</a>
     <a href="Contacts.html">Contact Us</a>
     <h1>NEED SOME HELP</h1>
-    <P>To get assistance kindly contact us through email on carlovers@gamil.com or book an appointment through the same email so that all your issues are worked on </P>
-    <p>We promise to get back to you as soon a s possible </p>
-    <p>Thankyou</p>
+    <P>To get assistance kindly contact us through email on carlovers@gamil.com or book an appointment through the same email so that all your issues are worked on. </P>
+    <p>We promise to get back to you as soon a s possible. </p>
+    <p>Thankyou.</p>
 </body>
 </html>
