made payment page

--- a/Contacts.html
+++ b/Contacts.html
@@ -11,6 +11,12 @@
     <a href="index.html">Home</a>
     <a href="aboutus.html">About Us</a>
     <a href="Contacts.html">Contact Us</a>
+    <a href="login.html">Login</a>
+    <a href="booking.html">Booking</a>
+    <a href="payment.html">Payment</a>
+
+    <button>HELP</button>
+    
     <h1>NEED SOME HELP</h1>
     <P>To get assistance kindly contact us through email on carlovers@gamil.com or book an appointment through the same email so that all your issues are worked on. </P>
     <p>We promise to get back to you as soon a s possible. </p>
