--- a/aboutus.html
+++ b/aboutus.html
@@ -40,7 +40,7 @@
 
         p {
             font-size: 1.1em;
-            color: #fff;
+            color: #000000;
             text-align: justify;
             padding: 0 20px;
             line-height: 1.6;
@@ -52,6 +52,9 @@
     <a href="index.html">Home</a>
     <a href="aboutus.html">About Us</a>
     <a href="Contacts.html">Contact Us</a>
+    <a href="login.html">Login</a>
+    <a href="booking.html">Booking</a>
+    <a href="payment.html">Payment</a>
     
     <section class="Max">
         <h1>CAR LOVERS</h1>
