--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="Contacts.html">Contact Us</a></li>
+                <a href="login.html">Login</a>
+                <a href="booking.html">Booking</a>
+                <a href="payment.html">Payment</a>
+                <a href="register.html">Register</a>
             </ul>
         </nav>
     </header>
@@ -64,19 +68,19 @@
         <h2>Car Listings</h2>
         <ul>
             <li>
-                <img src="car1.jpg" alt="Car 1">
+                <img src="images/Mazda.jpeg" alt="Car 1">
                 <h3>Toyota Camry 2020</h3>
                 <p>Price: $25,000</p>
                 <button>Book Now</button>
             </li>
             <li>
-                <img src="car2.jpg" alt="Car 2">
+                <img src="images/honda.jpg" alt="Car 2">
                 <h3>Honda Civic 2019</h3>
                 <p>Price: $20,000</p>
                 <button>Book Now</button>
             </li>
             <li>
-                <img src="car3.jpg" alt="Car 3">
+                <img src="images/Nissan.jpeg" alt="Car 3">
                 <h3>Ford Mustang 2018</h3>
                 <p>Price: $30,000</p>
                 <button>Book Now</button>
