ADDED MORE STYLE TO MY CSS LOGIN FILE

--- a/aboutus.html
+++ b/aboutus.html
@@ -55,6 +55,8 @@
     <a href="login.html">Login</a>
     <a href="booking.html">Booking</a>
     <a href="payment.html">Payment</a>
+    <a href="register.html">Register</a>
+
     
     <section class="Max">
         <h1>CAR LOVERS</h1>
