--- a/Contacts.html
+++ b/Contacts.html
@@ -14,6 +14,7 @@
     <a href="login.html">Login</a>
     <a href="booking.html">Booking</a>
     <a href="payment.html">Payment</a>
+    <a href="register.html">Register</a>
 
     <button>HELP</button>
     
