--- a/booking.html
+++ b/booking.html
@@ -15,6 +15,8 @@
     <a href="login.html">Login</a>
     <a href="register.html">Register</a>
     <a href="booking.html">Booking</a>
+    <a href="payment.html">Booking</a>
+    
     
     <section class="booking">
         <h1>Booking</h1>
