--- a/booking.html
+++ b/booking.html
@@ -15,7 +15,7 @@
     <a href="login.html">Login</a>
     <a href="register.html">Register</a>
     <a href="booking.html">Booking</a>
-    <a href="payment.html">Booking</a>
+    <a href="payment.html">Payment</a>
     
     
     <section class="booking">
