--- a/login.html
+++ b/login.html
@@ -8,7 +8,9 @@
     <title>Login</title>
     <link rel="stylesheet" href="login.css">
 </head>
+
 <body>
+    <header>
     <a href="index.html">Home</a>
     <a href="aboutus.html">About Us</a>
     <a href="Contacts.html">Contact Us</a>
@@ -16,6 +18,7 @@
     <a href="booking.html">Booking</a>
     <a href="payment.html">Payment</a>
     <a href="login.html">Login</a>
+</header>
     
     <section class="login">
         <h1>Login</h1>
