added a header section to the register page and designed it

--- a/register.html
+++ b/register.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <header>
     <a href="index.html">Home</a>
     <a href="aboutus.html">About Us</a>
     <a href="Contacts.html">Contact Us</a>
@@ -17,7 +18,7 @@
     <a href="booking.html">Booking</a>
     <a href="payment.html">Payment</a>
     <a href="register.html">Register</a>
-    
+</header>  
     <section class="register">
         <h1>Register</h1>
         <form>
