--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="Contacts.html">Contact Us</a></li>
-                <a href="login.html">Login</a>
+                <li><a href="login.html">Login</a></li>
                 <a href="booking.html">Booking</a>
                 <a href="payment.html">Payment</a>
                 <a href="register.html">Register</a>
