--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="Contacts.html">Contact Us</a></li>
                 <li><a href="login.html">Login</a></li>
-                <a href="booking.html">Booking</a>
-                <a href="payment.html">Payment</a>
-                <a href="register.html">Register</a>
+                <li><a href="booking.html">Booking</a></li>
+                <li><a href="payment.html">Payment</a></li>
+                <li><a href="register.html">Register</a></li>
             </ul>
         </nav>
     </header>
