made the header section for payment better

--- a/payment.html
+++ b/payment.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="payment.css">
 </head>
 <body>
+    <header>
     <a href="index.html">Home</a>
     <a href="aboutus.html">About Us</a>
     <a href="Contacts.html">Contact Us</a>
@@ -16,6 +17,7 @@
     <a href="register.html">Register</a>
     <a href="booking.html">Booking</a>
     <a href="payment.html">Payment</a>
+</header>
     
     <section class="payment">
         <h1>Payment</h1>
